# captioner

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  whisper.rs
src/components/: AutoCaptionDialog.tsx  CaptionPanel.tsx  DefaultsDialog.tsx  ExportOverlay.tsx  Preview.tsx  Timeline.tsx  Toolbar.tsx  Transport.tsx
src/hooks/: useOpenVideo.ts  useShortcuts.ts
src/lib/: layout.ts
